# tsfast

./: .gitignore  Cargo.toml  README.md  benchmark_results.txt  benchmark_results_full.txt  pyproject.toml
benches/: extraction_bench.rs
scripts/: benchmark_behavioral.py  benchmark_comparison.py  benchmark_expanding.py  benchmark_expanding_individual.py  benchmark_prev_data.py  comprehensive_benchmark.py  scaling_benchmark.py  synthetic_benchmark.py  verify_features.py  verify_new_features.py
src/: common.rs  downsampling.rs  expanding.rs  expanding_inner.rs  extract.rs  extract_inner.rs  lib.rs  registry.rs  sliding.rs  static_ext.rs  types.rs
src/expanding/: engine.rs
src/features/: energy.rs  mod.rs  signal.rs  statistics.rs  trend.rs
src/sliding/: engine.rs
src/static_ext/: depend.rs  extractor.rs  state.rs
tests/: test_expanding.py  test_tsfast.py
tsfast/: __init__.py  extractor.py  selection.py
