[package]
name = "tsfast"
version = "0.1.0"
edition = "2024"

[lib]
name = "tsfast"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.28"
pyo3 = { version = "0.28.3" }
ndarray = { version = "0.16", features = ["rayon"] }
num-traits = "0.2"
rayon = "1.10"
arrow = { version = "58.1.0", features = ["pyarrow"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
criterion = "0.5"

